--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 html {
   font-size: 100%;
 }
+
 /*universal reset*/
 * {
   margin: 0px;
@@ -31,15 +32,17 @@ ul {
   flex-shrink: 1;
   padding: 0.75rem;
 }
+
 /*mobile first*/
-.current {
+/* .current {
   background: #f2f2f2;
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center; /*for demo purposes, restyle as you see fit*/
-}
+  justify-content: center; }/*for demo purposes, restyle as you see fit*/
+ */
+
 h1 {
   font-size: 2rem;
 }
@@ -51,7 +54,7 @@ h3 {
 }
 .intro { /*for demo purposes, restyle as you see fit*/
   font-size: 1.25rem;
-  max-width: 600px;
+  /* max-width: 600px; */
 }
 /*drop cap*/
 p.intro:first-letter { /*for demo purposes, restyle as you see fit*/
@@ -116,20 +119,76 @@ nav a:hover {
   border-top: 8px solid #EB4A18;
 }
 /*END HEADER*/
+
+
+
+
 /*the nav with links to the othr projects*/
 /*for demo purposes, restyle as you see fit*/
 .global {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
 .global li {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
-  height: 200px;
-  outline: thin blue solid;
+  width: 65px;
+  height: 65px;
+  margin: 10px 10px 100px 10px;
+  display: inline-block;
+  background-size: cover;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.4s ease-out;
+  box-shadow: 0px 35px 77px -17px rgba(0, 0, 0, 0.44);
+  border-radius: 50px;
 }
+.global img {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  transition: all 0.4s ease-out;
+  border-radius: 50px;
+}
+.current img {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  transition: all 0.4s ease-out;
+  border-radius: 16px;
+}
+.animate-text {
+  opacity: 1;
+  transition: none;
+}
+.global li:hover img {
+  border-radius: 8px;
+}
+.global li:hover {
+  box-shadow: 0px 35px 77px -17px rgba(0, 0, 0, 0.64);
+  transform: scale(2);
+  margin: 50px 50px 80px 50px;
+}
+.global h2 {
+  padding-top: 45px;
+  font-size: 10px;
+  margin: 20px 0 0 0;
+  transform: translateX(100px);
+  color: #1c1e22;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+}
+.global li:hover .animate-text {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+
+
 /*DO NOT CHANGE ANYTHING IN THE FOOTER*/
 footer {
   background: #2C2029;
@@ -175,7 +234,7 @@ footer {
   .row {
     display: flex;
     width: 100%;
-    max-width: 1280px;
+    max-width: 800px;
     padding: .75rem;
     justify-content: space-between;
     margin: auto;
@@ -206,6 +265,18 @@ footer {
     width: 20%;
     border-right: 1px solid #333;
   }
+/* bottom nav for desktop */
+  .global {
+    width: 100%;
+    align-items: space-around;
+    justify-content: center;
+    max-width: 800px;
+  }
+  .animate-text {
+    opacity: 0;
+    transition: all 0.6s ease-in-out;
+  }
+
   /*footer*/
   #social {
     display: flex;
