--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,13 @@ ul {
 /*flexbox for layout*/
 .row {
   display: flex;
+  width: 90%;
+  justify-content: space-between;
+  margin: auto;
+  flex-direction: column;
+}
+figure {
+  display: flex;
   width: 100%;
   justify-content: space-between;
   margin: auto;
@@ -29,6 +36,7 @@ ul {
   width: 100%;
   justify-content: space-between;
   margin: auto;
+  padding-bottom: 1rem;
   flex-direction: column;
 }
 /*the star of the show*/
@@ -41,7 +49,55 @@ ul {
   flex-shrink: 1;
   padding: 0.75rem;
 }
+#upper {
+  display: flex;
+  flex-wrap: wrap;
+    max-width: 920px;
+    margin:auto;
+    justify-content: center;
+}
+#upper li {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 200px;
+  height: 250px;
+  margin:10px;
+    text-align:center;
+}
+#upper a {
+    text-decoration: none;
+  text-transform: uppercase;
+  font-size: .75rem;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+  height: 40px;
+  display: block;
+  line-height: 40px;
+  text-align: center;
+    color:#333;
+    transition: all .5s ease-in-out;
+}
+#upper a:hover {filter:saturate(2);}
+#upper img {border-radius:50%;
+  width:100%;max-width:100%; height:auto;}
 
+    .share {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    max-width: 800px;
+    margin: auto;
+  }
+  .sharelinks {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 10px;
+    float: left;
+    width: 90%;
+    max-width: 800px;
+    margin: auto;
+  }
 
 /*mobile first*/
 /* .current {
@@ -69,16 +125,18 @@ ul {
   
   h1 {
     margin-top: 0;
-    font-size: 3.052rem;
+    font-size: 3rem;
+    text-align: center;
   }
   
-  h2 {font-size: 2.441rem; font-weight:400}
+  h2 {font-size: 2.3rem; font-weight:400}
   
-  h3 {font-size: 1.953rem;}
+  h3 {font-size: 1.7rem;}
   
   h4 {font-size: 1.563rem;}
   
-  h5 {font-size: 1.25rem;}
+  h5 {font-size: 1.25rem;
+  text-align: center;}
   
   small, .text_small {font-size: 0.8rem;}
 
@@ -228,7 +286,8 @@ footer {
     width: 100%;
     max-width: 800px;
     padding: .75rem;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     margin: auto;
     margin-bottom: 1rem;
     flex-direction: row;
@@ -236,29 +295,14 @@ footer {
   .hero {
     display: flex;
     width: 100%;
-    /* max-width: 1280px; */
-    /* padding: .75rem; */
+    max-width: 800px;
+    padding: .75rem;
     justify-content: space-between;
-    /* margin: auto; */
+    margin: auto;
     margin-bottom: 1rem;
 
   }
-  .share {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-  }
-  .sharelinks {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 10px;
-    float: left;
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-  }
+
   /*header*/
   #logo, #logo_white {
     max-width: 200px;
@@ -289,9 +333,9 @@ footer {
 
   .global {
     width: 100%;
+    max-width: 800px;
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
     align-items: space-around;
     justify-content: center;
     
@@ -347,7 +391,8 @@ footer {
   }
 
 
-
+  h5 {font-size: 1.25rem;
+    text-align: center;}
 
 
 
