--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,14 @@ figure {
   flex-direction: column;
 }
 .hero {
+  background-image: url("../img/hero.jpg");
+  background-size: cover;
+  min-height: 300px;
   display: flex;
-  width: 100%;
-  justify-content: space-between;
-  margin: auto;
-  padding-bottom: 1rem;
   flex-direction: column;
+  border-bottom: thin solid #333;
+  margin-bottom: 1rem;
+  
 }
 /*the star of the show*/
 .item {
@@ -217,7 +219,7 @@ nav a:hover {
 }
 /*END HEADER*/
 .profile {
-  border-radius: 200px;
+  border-radius: 400px;
 }
 
 
@@ -304,14 +306,21 @@ footer {
     flex-direction: row;
   }
   .hero {
-    display: flex;
+    /* display: flex;
     width: 100%;
     height: auto;
     padding: .75rem;
     justify-content: space-between;
     margin: auto;
+    margin-bottom: 1rem; */
+    background-image: url("../img/hero.jpg");
+    background-size: cover;
+    min-height: 600px;
+    width: 100%
+    display: flex;
+    flex-direction: column;
+    border-bottom: thin solid #333;
     margin-bottom: 1rem;
-
   }
 
   /*header*/
