--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ ul {
 figure {
   display: flex;
   width: 100%;
+  height: auto;
   justify-content: space-between;
   margin: auto;
   flex-direction: column;
