--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ figure {
     text-align:center;
 }
 #upper a {
-    text-decoration: none;
+  text-decoration: none;
   text-transform: uppercase;
   font-size: .75rem;
   font-family: 'Lato', sans-serif;
@@ -102,15 +102,20 @@ transform: scale(0.9);
 
 #upper img {border-radius:50%;
   width:100%;max-width:100%; height:auto;}
-
-    .share {
+  hr {
+    border: none;
+    height: 2px;
+    width: 100%;
+    background-color: #333333;
+  }
+.share {
     display: flex;
     flex-direction: column;
     width: 90%;
     max-width: 800px;
     margin: auto;
-  }
-  .sharelinks {
+}
+.sharelinks {
     display: flex;
     justify-content: space-between;
     padding-top: 10px;
@@ -118,7 +123,8 @@ transform: scale(0.9);
     width: 90%;
     max-width: 800px;
     margin: auto;
-  }
+}
+
 
 /*mobile first*/
 /* .current {
@@ -272,11 +278,23 @@ nav a:hover {
 }
 .global li {
   width: 20%;
-  margin: 5px;
+  margin: .5;
   text-align: center;
 }
+.global a {
+  color: black;
+}
 h5 {
+  /* font-size: .75rem; */
+  text-decoration: none;
+  text-transform: uppercase;
   font-size: .75rem;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+  height: 20px;
+  display: block;
+  line-height: 20px;
+  text-align: center;
 }
 
 }
@@ -405,6 +423,9 @@ footer {
     cursor: pointer;
     transition: all 0.4s ease-out;
     border-radius: 50px;
+
+
+    
   }
   .global img {
     height: 100%;
