--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,40 @@ figure {
   flex-shrink: 1;
   padding: 0.75rem;
 }
-.item img {
-  max-width: 100%;
-  height: auto;
+#hero{
+  display: flex;
+   align-items: center;
+   padding: 50px;
+   justify-content: center;
+   min-height: 18rem;
+   max-width: 100%;
+   background-image: url("../img/hero.jpg");
+   background-size: cover;
+   flex-direction: column;
+   border-bottom: thin solid #333;
+   /* margin-bottom: 1rem; */
 }
+.profile_pic_containter{
+	position: absolute;
+  height: 12em; 
+	width: 100%; 
+	z-index: 1; 
+	margin-top: 17rem; 
+	justify-content: center; 
+	display:flex; 
+}
+.profile_pic{
+	 
+	height: 12em; 
+	width: 12em; 
+  border-radius: 50%; 
+	background-image: url("../img/kemiprofile.jpg");
+	background-size: contain; 
+}
+.margin{
+  margin-top:2.4em; 
+}
+
 #upper {
   display: flex;
   flex-wrap: wrap;
@@ -153,7 +183,11 @@ transform: scale(0.9);
     text-align: center;
   }
 
-  h2 {font-size: 2.3rem; font-weight:400}
+  h2 {font-size: 2.3rem;
+    font-weight:400;
+    align-self: center;
+  
+  }
 
   h3 {font-size: 1.7rem;}
 
@@ -168,6 +202,7 @@ transform: scale(0.9);
   font-size: 1.25rem;
   /* max-width: 600px; */
 }
+
 /*drop cap*/
 p.intro:first-letter { /*for demo purposes, restyle as you see fit*/
   color: #903;
@@ -253,11 +288,11 @@ nav a:hover {
   border-top: 8px solid #EB4A18;
 }
 /*END HEADER*/
-.profile {
+/* .profile {
   border-radius: 400px;
   height: 100%;
   width:auto
-}
+} */
 
 
 /*the nav with links to the other projects*/
@@ -356,14 +391,7 @@ footer {
     margin-bottom: 1rem;
     flex-direction: row;
   }
-  .hero {
-    /* display: flex;
-    width: 100%;
-    height: auto;
-    padding: .75rem;
-    justify-content: space-between;
-    margin: auto;
-    margin-bottom: 1rem; */
+  /* hero {
     background-image: url("../img/hero.jpg");
     background-size: cover;
     min-height: 600px;
@@ -372,7 +400,9 @@ footer {
     flex-direction: column;
     border-bottom: thin solid #333;
     margin-bottom: 1rem;
-  }
+  } */
+
+
 
   /*header*/
   #logo, #logo_white {
