--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ transform: scale(0.9);
   p {margin-bottom: 1rem;}
 
   h1, h2, h3, h4, h5 {
-    margin: 3rem 0 1.38rem;
+    margin: 1rem 0 1.38rem;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.3;
   }
@@ -301,7 +301,7 @@ nav a:hover {
 /*the nav with links to the other projects*/
 /*for demo purposes, restyle as you see fit*/
 
-@media screen and (max-width:700px) {
+/* @media screen and (max-width:700px) {
 .global {
   width: 100%;
   display: flex;
@@ -332,8 +332,20 @@ h5 {
   text-align: center;
 }
 
-}
+} */
 
+/*bottom nav mobile*/
+.global {
+  width: 100%;
+}
+.global img {
+display: none;
+}
+.global li {
+  text-align: center;
+  width: 100%;
+  border-top: 8px solid black;
+}
 
 
 /* End mobile query */
@@ -453,11 +465,11 @@ footer {
     cursor: pointer;
     transition: all 0.4s ease-out;
     border-radius: 50px;
+    border: none;
 
-
-    
   }
   .global img {
+    display: flex;
     height: 100%;
     width: 100%;
     position: absolute;
